# autosedia

./: README.md  pyproject.toml  sedia_logo.tif
autosedia/: autosedia.py  requirements.txt  run_autosedia.sh  setup_autosedia.ps1  setup_autosedia.sh
autosedia/data/ManualBinary/: maskbinary01.tif  targetbinary01.tif
autosedia/data/histo/MarkerPositive/: expressed_target_combined.csv  unexpressed_target_combined.csv
autosedia/modules/: ManualSVT.py  histo.py  labeling_only.py
